<resources>
    <string name="app_name">MyShipRace</string>
    <string name="icon_credits">Icons made by Those Icons (www.flaticon.com/authors/those-icons) from www.flaticon.com is licensed by Creative Commons BY 3.0: https://creativecommons.org/licenses/by/3.0/</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="author">Author</string>
    <string name="author_name" translatable="false">Piero Collevecchio</string>
    <string name="title_activity_maps">Map</string>
    <string name="track_name_inputbox_title">Track name</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="adapter_tracciato_num_boe">Number of buoys:</string>
    <string name="activity_main_drawer_track_list">Track list</string>
    <string name="activity_main_drawer_info">Info</string>
    <string name="title_activity_new_track">New track</string>
    <string name="latitude">Lat.</string>
    <string name="longitude">Lon.</string>
    <string name="order">Order</string>
    <string name="alert_boa_remove">Remove selected buoy?</string>
    <string name="track_removed_text">Track removed</string>
    <string name="undo_track_delete">Track restored</string>
    <string name="buoy_removed_text">Buoy removed</string>
    <string name="undo_buoy_remove">Buoy restored</string>
    <string name="undo_snackbar">UNDO</string>
    <string name="alert_track_remove">Rimuovere il tracciato selezionato?</string>
    <string name="boa_info_alert_title">New buoy</string>
    <string name="speed">Speed</string>
    <string name="activity_maps_start_position">Start</string>
    <string name="activity_maps_finish_position">Finish</string>
    <string name="activity_maps_buoy">Buoy</string>
    <string name="activity_main_drawer_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="pref_header_general">General</string>
    <string name="unknown_location">Unknown location</string>
    <string name="start_race">Start race</string>
    <string name="stop_race">Stop race</string>
    <string name="distance">Distance</string>
    <string name="current_position">Current position</string>
    <string name="approaching_boa">Approaching buoy number</string>
    <string name="approaching_finish">Approaching finish line</string>
    <string name="next_buoy">"Next buoy: buoy "</string>
    <string name="next_buoy_finish">Next buoy: finish</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_is_mandatory">Location permission is mandatory for this application. The application will now close</string>
    <string name="pref_server_address_description">Upload server address</string>
    <string name="pref_server_address_title">Server</string>
    <string name="pref_download_address_description">Download track server address</string>
    <string name="pref_download_address_title">Download server</string>
    <string name="pref_ship_name_description">Your ship name</string>
    <string name="pref_ship_name_title">Ship name</string>
    <string name="pref_distance_description">Approaching buoy distance</string>
    <string name="pref_distance_title">Distance</string>
    <string name="important">IMPORTANT</string>
    <string name="set_a_ship_name">Set a ship name in settings (lateral menu)</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_not_enabled">GPS is not enabled</string>
    <string name="dialog_download_server">Track download server address</string>
    <string name="app_info">Informazioni sull\'applicazione</string>
</resources>
