<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="http://ktulu.altervista.org"
        android:key="pref_key_server_address"
        android:summary="@string/pref_server_address_description"
        android:title="@string/pref_server_address_title" />

    <EditTextPreference
        android:defaultValue="http://ktulu.altervista.org/track"
        android:key="pref_key_download_address"
        android:summary="@string/pref_download_address_description"
        android:title="@string/pref_download_address_title" />

    <EditTextPreference
        android:key="pref_key_ship_name"
        android:summary="@string/pref_ship_name_description"
        android:title="@string/pref_ship_name_title" />
    <EditTextPreference
        android:key="pref_key_circle_radius"
        android:defaultValue="20"
        android:inputType="number"
        android:summary="@string/pref_distance_description"
        android:title="@string/pref_distance_title" />
</PreferenceScreen>