<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_tracks"
            android:title="@string/activity_main_drawer_track_list" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/activity_main_drawer_info" />

    </group>

    <group
        android:id="@+id/nav_menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/activity_main_drawer_settings" />
    </group>
</menu>
