<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alert_new_boa_order_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="16sp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp" />

        <EditText
            android:id="@+id/alert_new_boa_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alert_new_boa_latitude_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="16sp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp" />

        <EditText
            android:id="@+id/alert_new_boa_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/alert_new_boa_longitude_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="16sp"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp" />

        <EditText
            android:id="@+id/alert_new_boa_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </LinearLayout>
</LinearLayout>