<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#FFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adapter_boa_etichetta_order"
                android:text="@string/order" />

            <TextView
                android:id="@+id/adapter_boa_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <TextView
                android:id="@+id/adapter_boa_etichetta_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adapter_boa_order"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/adapter_boa_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adapter_boa_order"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/adapter_boa_etichetta_latitude"
                android:layout_toRightOf="@id/adapter_boa_etichetta_latitude"
                android:text="12.1" />

            <TextView
                android:id="@+id/adapter_boa_etichetta_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adapter_boa_etichetta_latitude"
                android:text="@string/longitude" />

            <TextView
                android:id="@+id/adapter_boa_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/adapter_boa_etichetta_latitude"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/adapter_boa_etichetta_longitude"
                android:layout_toRightOf="@id/adapter_boa_etichetta_longitude"
                android:text="12.1" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>