<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MapsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_race_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/start_race" />

        <Button
            android:id="@+id/stop_race_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/stop_race" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_maps_latitude_etichetta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/activity_maps_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_maps_longitude_etichetta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/activity_maps_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="0" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_maps_speed_etichetta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/speed" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_maps_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:layout_marginStart="@dimen/margin_left"
                        android:layout_marginTop="@dimen/margin_top"
                        android:text="0" />

                    <TextView
                        android:id="@+id/activity_maps_speed_kmh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:layout_marginStart="@dimen/margin_left"
                        android:layout_marginTop="@dimen/margin_top"
                        android:text="0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/activity_maps_distance_etichetta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/activity_maps_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginStart="@dimen/margin_left"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>